erDiagram
  installed_base ||--o{ service_logs : "installed_base_id"
  user_master ||--o{ service_logs : "created_by"
  service_logs ||--o{ service_log_part_replacements : "service_log_id"
  service_logs ||--o{ spare_parts_consumption : "service_log_id"
  service_logs ||--o{ complaint_service_logs : "service_log_id"
  complaints ||--o{ complaint_service_logs : "complaint_id"

  service_logs {
    INT id PK
    INT installed_base_id FK
    INT order_ref_id
    INT order_id
    VARCHAR fab_number
    VARCHAR serial_number
    VARCHAR machine_model
    VARCHAR warranty_chargeable
    DATE complaint_date
    TEXT issue_description
    VARCHAR engineer_name
    DATE visit_date
    TEXT action_taken
    DATE closure_date
    VARCHAR part_replaced
    DECIMAL running_hours
    VARCHAR customer_feedback
    TEXT remarks
    TINYINT is_draft
    INT created_by FK
    VARCHAR username
    TIMESTAMP created_at
    TIMESTAMP updated_at
    TIMESTAMP deleted_at
  }

  service_log_part_replacements {
    INT id PK
    INT service_log_id FK
    VARCHAR machine_model_code
    VARCHAR machine_model
    DECIMAL running_hours
    INT quantity
    INT sort_order
    TIMESTAMP deleted_at
  }

  complaint_service_logs {
    INT id PK
    INT complaint_id FK
    INT service_log_id FK
    VARCHAR complaint_status
    INT reopen_cycle_number
    INT created_by
    TIMESTAMP created_at
  }
